[gd_scene load_steps=13 format=3 uid="uid://c4cnvj0q7dhug"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_l28vo"]
[ext_resource type="Texture2D" uid="uid://dljvwl4c1ywo4" path="res://assets/texture/696.jpg" id="1_ly3gg"]
[ext_resource type="PackedScene" uid="uid://b64mg8ogauiq2" path="res://scenes/enemy.tscn" id="3_0mv0f"]
[ext_resource type="PackedScene" uid="uid://wfhfr3h6e6ch" path="res://scenes/player.tscn" id="5_1i4r1"]
[ext_resource type="AudioStream" uid="uid://cthxcbx8payoc" path="res://assets/audio/African_fun_long.mp3" id="5_4y05e"]
[ext_resource type="AudioStream" uid="uid://3cdo2hb0orkc" path="res://assets/audio/ough-47202 (mp3cut.net).mp3" id="6_vith1"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_hk3ff"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_jfvug"]
sky_material = SubResource("ProceduralSkyMaterial_hk3ff")

[sub_resource type="Environment" id="Environment_uxtgd"]
background_mode = 2
sky = SubResource("Sky_jfvug")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="NavigationMesh" id="NavigationMesh_o3rts"]
vertices = PackedVector3Array(-43.5, 0.5, -49.5, -49.5, 0.5, -49.5, -49.5, 0.5, -43.5, -49.5, 0.5, 43.25, -49.5, 0.5, 49.5, -43.5, 0.5, 49.5, 49.5, 0.5, -43.5, 49.5, 0.5, -49.5, 43.25, 0.5, -49.5, 43.25, 0.5, 49.5, 49.5, 0.5, 49.5, 49.5, 0.5, 43.25, -37.25, 0.5, -49.5, -43.5, 0.5, -49.5, -49.5, 0.5, -43.5, -49.5, 0.5, -37.25, -49.5, 0.5, 43.25, -43.5, 0.5, 49.5, -37.25, 0.5, 49.5, -49.5, 0.5, 37, 49.5, 0.5, -37.25, 49.5, 0.5, -43.5, 43.25, 0.5, -49.5, 37, 0.5, -49.5, 37, 0.5, 49.5, 43.25, 0.5, 49.5, 49.5, 0.5, 43.25, -49.5, 0.5, 0, -49.5, 0.5, 6, -6.25, 0.5, 49.5, 18.5, 0.5, 49.5, 49.5, 0.5, 24.75, 49.5, 0.5, 18.5, 12.25, 0.5, 49.5, 49.5, 0.5, -6.25, 49.5, 0.5, -12.5, 12.25, 0.5, -49.5, 6, 0.5, -49.5, 37, 0.5, 49.5, 49.5, 0.5, 43.25, 49.5, 0.5, 37, 30.75, 0.5, 49.5, -31, 0.5, -49.5, -37.25, 0.5, -49.5, -49.5, 0.5, -37.25, -49.5, 0.5, -31, -49.5, 0.5, 37, -37.25, 0.5, 49.5, -31, 0.5, 49.5, -49.5, 0.5, 30.75, 49.5, 0.5, -31, 49.5, 0.5, -37.25, 37, 0.5, -49.5, 30.75, 0.5, -49.5, -12.5, 0.5, -49.5, -18.75, 0.5, -49.5, -49.5, 0.5, -18.75, -49.5, 0.5, -12.5, -49.5, 0.5, 18.5, -18.75, 0.5, 49.5, -12.5, 0.5, 49.5, -49.5, 0.5, 12.25, 49.5, 0.5, -6.25, 6, 0.5, -49.5, 0, 0.5, -49.5, 49.5, 0.5, 0, 49.5, 0.5, -12.5, 49.5, 0.5, -18.75, 18.5, 0.5, -49.5, 12.25, 0.5, -49.5, 30.75, 0.5, 49.5, 49.5, 0.5, 37, 49.5, 0.5, 30.75, 24.75, 0.5, 49.5, -49.5, 0.5, 24.75, -49.5, 0.5, 30.75, -31, 0.5, 49.5, -24.75, 0.5, 49.5, 49.5, 0.5, -31, 30.75, 0.5, -49.5, 24.75, 0.5, -49.5, 49.5, 0.5, -24.75, -24.75, 0.5, -49.5, -31, 0.5, -49.5, -49.5, 0.5, -31, -49.5, 0.5, -24.75, 49.5, 0.5, 0, 0, 0.5, -49.5, -49.5, 0.5, 0, -6.25, 0.5, 49.5, 0, 0.5, 49.5, 49.5, 0.5, 6, 12.25, 0.5, 49.5, 49.5, 0.5, 18.5, 49.5, 0.5, 12.25, 6, 0.5, 49.5, 24.75, 0.5, 49.5, 49.5, 0.5, 30.75, 49.5, 0.5, 24.75, 18.5, 0.5, 49.5, 0, 0.5, -49.5, -6.25, 0.5, -49.5, -49.5, 0.5, -6.25, -49.5, 0.5, 0, 6, 0.5, 49.5, 49.5, 0.5, 12.25, 49.5, 0.5, 6, 0, 0.5, 49.5, -49.5, 0.5, 24.75, -24.75, 0.5, 49.5, -18.75, 0.5, 49.5, -49.5, 0.5, 18.5, 49.5, 0.5, -18.75, 49.5, 0.5, -24.75, 24.75, 0.5, -49.5, 18.5, 0.5, -49.5, -18.75, 0.5, -49.5, -24.75, 0.5, -49.5, -49.5, 0.5, -24.75, -49.5, 0.5, -18.75, -6.25, 0.5, -49.5, -12.5, 0.5, -49.5, -49.5, 0.5, -12.5, -49.5, 0.5, -6.25, -49.5, 0.5, 12.25, -12.5, 0.5, 49.5, -6.25, 0.5, 49.5, -49.5, 0.5, 6)
polygons = [PackedInt32Array(2, 1, 0), PackedInt32Array(5, 4, 3), PackedInt32Array(8, 7, 6), PackedInt32Array(11, 10, 9), PackedInt32Array(13, 12, 14), PackedInt32Array(14, 12, 15), PackedInt32Array(17, 16, 18), PackedInt32Array(18, 16, 19), PackedInt32Array(21, 20, 22), PackedInt32Array(22, 20, 23), PackedInt32Array(26, 25, 24), PackedInt32Array(29, 28, 27), PackedInt32Array(31, 30, 32), PackedInt32Array(32, 30, 33), PackedInt32Array(35, 34, 36), PackedInt32Array(36, 34, 37), PackedInt32Array(39, 38, 40), PackedInt32Array(40, 38, 41), PackedInt32Array(43, 42, 44), PackedInt32Array(44, 42, 45), PackedInt32Array(47, 46, 48), PackedInt32Array(48, 46, 49), PackedInt32Array(51, 50, 52), PackedInt32Array(52, 50, 53), PackedInt32Array(55, 54, 56), PackedInt32Array(56, 54, 57), PackedInt32Array(59, 58, 60), PackedInt32Array(60, 58, 61), PackedInt32Array(63, 62, 64), PackedInt32Array(64, 62, 65), PackedInt32Array(67, 66, 68), PackedInt32Array(68, 66, 69), PackedInt32Array(71, 70, 72), PackedInt32Array(72, 70, 73), PackedInt32Array(75, 74, 76), PackedInt32Array(76, 74, 77), PackedInt32Array(79, 78, 80), PackedInt32Array(80, 78, 81), PackedInt32Array(83, 82, 84), PackedInt32Array(84, 82, 85), PackedInt32Array(91, 90, 86), PackedInt32Array(86, 90, 89), PackedInt32Array(86, 89, 88), PackedInt32Array(86, 88, 87), PackedInt32Array(93, 92, 94), PackedInt32Array(94, 92, 95), PackedInt32Array(97, 96, 98), PackedInt32Array(98, 96, 99), PackedInt32Array(101, 100, 102), PackedInt32Array(102, 100, 103), PackedInt32Array(105, 104, 106), PackedInt32Array(106, 104, 107), PackedInt32Array(109, 108, 110), PackedInt32Array(110, 108, 111), PackedInt32Array(113, 112, 114), PackedInt32Array(114, 112, 115), PackedInt32Array(117, 116, 118), PackedInt32Array(118, 116, 119), PackedInt32Array(121, 120, 122), PackedInt32Array(122, 120, 123), PackedInt32Array(125, 124, 126), PackedInt32Array(126, 124, 127)]
agent_max_climb = 0.05

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ee4sb"]
albedo_texture = ExtResource("1_ly3gg")
uv1_triplanar = true

[sub_resource type="BoxShape3D" id="BoxShape3D_kw8k0"]
size = Vector3(1, 5, 98)

[node name="world" type="Node3D"]
script = ExtResource("1_l28vo")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_uxtgd")

[node name="map" type="Node3D" parent="."]

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="map"]
navigation_mesh = SubResource("NavigationMesh_o3rts")

[node name="CSGBox3D" type="CSGBox3D" parent="map/NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
material_override = SubResource("StandardMaterial3D_ee4sb")
use_collision = true
size = Vector3(100, 1, 100)

[node name="enemy" parent="map/NavigationRegion3D" instance=ExtResource("3_0mv0f")]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 10.061, 0, -0.00211215)
player_path = NodePath("../../../player")

[node name="enemy3" parent="map/NavigationRegion3D" instance=ExtResource("3_0mv0f")]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 10.061, 0, 8.60015)
player_path = NodePath("../../../player")

[node name="enemy5" parent="map/NavigationRegion3D" instance=ExtResource("3_0mv0f")]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, -2.59147, 0, 8.60015)
player_path = NodePath("../../../player")

[node name="enemy6" parent="map/NavigationRegion3D" instance=ExtResource("3_0mv0f")]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, -12.0979, 0, 8.60015)
player_path = NodePath("../../../player")

[node name="enemy7" parent="map/NavigationRegion3D" instance=ExtResource("3_0mv0f")]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, -12.0979, 0, -0.261016)
player_path = NodePath("../../../player")

[node name="enemy8" parent="map/NavigationRegion3D" instance=ExtResource("3_0mv0f")]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, -12.0979, 0, -7.8563)
player_path = NodePath("../../../player")

[node name="enemy9" parent="map/NavigationRegion3D" instance=ExtResource("3_0mv0f")]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, -1.59109, 0, -7.8563)
player_path = NodePath("../../../player")

[node name="enemy10" parent="map/NavigationRegion3D" instance=ExtResource("3_0mv0f")]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 9.67525, 0, -7.8563)
player_path = NodePath("../../../player")

[node name="Walls" type="StaticBody3D" parent="map"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="map/Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -49.5, 2.5, 0)
shape = SubResource("BoxShape3D_kw8k0")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="map/Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 49.5, 2.5, 0)
shape = SubResource("BoxShape3D_kw8k0")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="map/Walls"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 2.5, -49.5)
shape = SubResource("BoxShape3D_kw8k0")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="map/Walls"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 2.5, 49.5)
shape = SubResource("BoxShape3D_kw8k0")

[node name="player" parent="." instance=ExtResource("5_1i4r1")]
transform = Transform3D(0.659562, 0, 0.357041, 0, 0.75, 0, -0.357041, 0, 0.659562, 0, 0, 0)
sens_horizontal = 0.2

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="UI"]
visible = false
layout_mode = 0
offset_left = -159.0
offset_top = -112.0
offset_right = 1331.0
offset_bottom = 781.0
color = Color(1, 0.364706, 0.407843, 0.25098)

[node name="Point" type="Label" parent="UI"]
layout_mode = 0
offset_left = 24.0
offset_top = 19.0
offset_right = 65.0
offset_bottom = 45.0
text = "Point: 0"

[node name="PanelPlay" type="Panel" parent="UI"]
process_mode = 3
layout_mode = 0
offset_left = 239.0
offset_top = 158.0
offset_right = 873.0
offset_bottom = 494.0

[node name="Button" type="Button" parent="UI/PanelPlay"]
layout_mode = 0
offset_left = 257.0
offset_top = 205.0
offset_right = 357.0
offset_bottom = 246.0
text = "Play"

[node name="Label" type="Label" parent="UI/PanelPlay"]
layout_mode = 0
offset_left = 161.0
offset_top = 59.0
offset_right = 462.0
offset_bottom = 104.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = "Surival Infinity Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Coin" type="Label" parent="UI/PanelPlay"]
visible = false
layout_mode = 0
offset_left = 252.0
offset_top = 128.0
offset_right = 362.0
offset_bottom = 185.0
text = "The end
Point: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ZombieSpawnTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="BackgroundAduio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_4y05e")
autoplay = true

[node name="OughAduio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_vith1")

[connection signal="enemy_die" from="map/NavigationRegion3D/enemy" to="." method="_on_enemy_enemy_die"]
[connection signal="enemy_die" from="map/NavigationRegion3D/enemy" to="." method="_on_destroy_enemy"]
[connection signal="enemy_die" from="map/NavigationRegion3D/enemy3" to="." method="_on_destroy_enemy"]
[connection signal="enemy_die" from="map/NavigationRegion3D/enemy5" to="." method="_on_destroy_enemy"]
[connection signal="enemy_die" from="map/NavigationRegion3D/enemy6" to="." method="_on_destroy_enemy"]
[connection signal="enemy_die" from="map/NavigationRegion3D/enemy7" to="." method="_on_destroy_enemy"]
[connection signal="enemy_die" from="map/NavigationRegion3D/enemy8" to="." method="_on_destroy_enemy"]
[connection signal="enemy_die" from="map/NavigationRegion3D/enemy9" to="." method="_on_destroy_enemy"]
[connection signal="enemy_die" from="map/NavigationRegion3D/enemy10" to="." method="_on_destroy_enemy"]
[connection signal="losed" from="player" to="." method="_on_player_losed"]
[connection signal="player_hit" from="player" to="." method="_on_player_player_hit"]
[connection signal="pressed" from="UI/PanelPlay/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="ZombieSpawnTimer" to="." method="_on_zombie_spawn_timer_timeout"]
